# procurement_system

./: .env  .gitignore  ReadMe.md  config.py  env  pyproject.toml  requirement.txt  requirements.txt
db/: procurement_db.sql  procurement_db_data.sql  procurement_db_schema.sql
ppmp/: admin.py  apps.py  forms.py  helper.py  models.py  serializers.py  urls.py  views.py
ppmp/api/: Category.py  CostCenter.py  Item.py  app.py  item.py  order_item.py  ppmp.py  stayup.py  urls.py
ppmp/migrations/: 0001_initial.py  0002_rename_item_desc_id_app_item_desc_and_more.py  0003_rename_specifics_1_itemdescription_specifics_and_more.py  0004_rename_fq_quantity_orderdetails_first_quart_quant_and_more.py  0005_rename_specifics_itemdescription_spec_1_and_more.py  0006_rename_cc_num_ppmp_cc_rename_sof_num_ppmp_sof.py  0007_costcenterbudget_curr_budget.py  0008_costcenterbudget_date_set.py  0009_alter_app_group_id.py  0010_remove_orderdetails_fifth_quantity_and_more.py  0011_orderdetails_date.py  0012_rename_received_quatation_status_orderdetails_received_quotation_status.py  0013_alter_orderdetails_date.py  0014_ppmptrack_orderdetails.py  0015_alter_ppmptrack_barcode_alter_ppmptrack_cc_name_and_more.py  0016_ppmp_is_lock_alter_item_category_and_more.py  0017_ppmp_is_deleted_ppmp_key_log.py  0018_remove_ppmp_is_lock_ppmp_key_log_cat_ppmp_key_log_cc_and_more.py  0019_itemcategory_procurementmode_remove_ppmp_key_log_cat_and_more.py  0020_alter_orderdetails_item_alter_orderdetails_ppmp_and_more.py  0022_alter_prices_created_at.py  (+7 more)
procurement_system/: asgi.py  settings.py  urls.py  wsgi.py
(+36 files in other folders)
