[tool.poetry]
name = "repl_nix_procurementsystem"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
fpdf = "^1.7.2"
python-dotenv = "^0.21.0"
Babel = "^2.11.0"
django-tailwind = "^3.4.0"
django-browser-reload = "^1.6.0"
tzdata = "^2022.7"
psycopg2-binary = "^2.9.5"
fpdf2 = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
